# puffin

./: .gitignore  Cargo.toml  README.md  Syntax.txt
crates/puffin/: Cargo.toml
crates/puffin/scripts/tests/: pattern.pf  snake.pf  syntax_error.pf
crates/puffin/src/: lib.rs  main.rs  repl.rs
crates/puffin/src/common/: mod.rs  token.rs
crates/puffin/src/common/ast/: lit.rs  mod.rs  prelude.rs
crates/puffin_ast/: Cargo.toml
crates/puffin_ast/src/: green.rs  lib.rs  syntax_kind.rs
crates/puffin_ast/src/ast/: common.rs  expr.rs  ident.rs  item.rs  lit.rs  mod.rs  pat.rs  path.rs  stmt.rs
crates/puffin_ast/src/ast/expr/: binary.rs  mod.rs
crates/puffin_codegen/: Cargo.toml
crates/puffin_codegen/src/: define.rs  lib.rs
crates/puffin_error/: Cargo.toml
crates/puffin_error/src/: compiler.rs  lib.rs
crates/puffin_error/src/snapshots/: puffin_error__compiler__tests__color.snap  puffin_error__compiler__tests__multiline_highlights.snap  puffin_error__compiler__tests__multiple_highlights.snap  puffin_error__compiler__tests__multiple_overlapping.snap  puffin_error__compiler__tests__multiple_overlapping_and_colliding.snap  puffin_error__compiler__tests__overlapping.snap  puffin_error__compiler__tests__same_line_message_colliding.snap  puffin_error__compiler__tests__same_line_message_not_colliding.snap  puffin_error__compiler__tests__same_line_non_colliding.snap  puffin_error__compiler__tests__skip.snap
crates/puffin_parser/: Cargo.toml
crates/puffin_parser/src/: ast_parser.rs  lexer.rs  lib.rs  parser.rs
crates/puffin_parser/src/lexer/: lexer.rs  mod.rs  tokenstream.rs
crates/puffin_parser/src/lexer/snapshots/: puffin_parser__lexer__lexer__lexer_test__keywords_and_ident.snap  puffin_parser__lexer__lexer__lexer_test__numbers.snap  puffin_parser__lexer__lexer__lexer_test__symbol_kinds.snap
crates/puffin_parser/src/parser/: mod.rs  parser.rs
crates/puffin_parser/src/snapshots/: puffin_parser__ast_parser__ast_parser_tests__assign_stmt.snap  puffin_parser__ast_parser__ast_parser_tests__block_stmt.snap  puffin_parser__ast_parser__ast_parser_tests__block_stmt_2.snap  puffin_parser__ast_parser__ast_parser_tests__let_and_print.snap  puffin_parser__ast_parser__ast_parser_tests__let_stmt.snap  puffin_parser__ast_parser__ast_parser_tests__multiple_prefix_operation.snap  puffin_parser__ast_parser__ast_parser_tests__multiple_simple.snap  puffin_parser__ast_parser__ast_parser_tests__order_of_operations.snap  puffin_parser__ast_parser__ast_parser_tests__paren.snap  puffin_parser__ast_parser__ast_parser_tests__paren_2.snap  puffin_parser__ast_parser__ast_parser_tests__paren_3.snap  puffin_parser__ast_parser__ast_parser_tests__prefix_operation.snap  puffin_parser__ast_parser__ast_parser_tests__print.snap  puffin_parser__ast_parser__ast_parser_tests__simple_expr.snap  puffin_parser__lexer__lexer_test__keywords_and_ident.snap  puffin_parser__lexer__lexer_test__numbers.snap  puffin_parser__lexer__lexer_test__symbol_kinds.snap  puffin_parser__parser__parser_tests__assign_stmt.snap  puffin_parser__parser__parser_tests__block_stmt.snap  puffin_parser__parser__parser_tests__block_stmt_2.snap  puffin_parser__parser__parser_tests__block_stmt_3.snap  puffin_parser__parser__parser_tests__block_stmt_4.snap  puffin_parser__parser__parser_tests__just_number.snap  puffin_parser__parser__parser_tests__let_stmt.snap  puffin_parser__parser__parser_tests__multiple_prefix_operation.snap  puffin_parser__parser__parser_tests__multiple_simple.snap  puffin_parser__parser__parser_tests__multiple_stmt.snap  puffin_parser__parser__parser_tests__order_of_operations.snap  puffin_parser__parser__parser_tests__paren.snap  puffin_parser__parser__parser_tests__paren_2.snap  puffin_parser__parser__parser_tests__paren_3.snap  puffin_parser__parser__parser_tests__paren_4.snap  puffin_parser__parser__parser_tests__paren_4.snap.new  puffin_parser__parser__parser_tests__prefix_operation.snap  puffin_parser__parser__parser_tests__print_stmt.snap  puffin_parser__parser__parser_tests__simple_expr.snap
crates/puffin_parser/src/tests/: mod.rs  parser.rs
crates/puffin_parser/src/tests/snapshots/: puffin_parser__tests__parser__assign_stmt.snap  puffin_parser__tests__parser__basic_fn.snap  puffin_parser__tests__parser__block_stmt.snap  puffin_parser__tests__parser__block_stmt_2.snap  puffin_parser__tests__parser__block_stmt_3.snap  puffin_parser__tests__parser__block_stmt_4.snap  puffin_parser__tests__parser__fn_with_param.snap  puffin_parser__tests__parser__just_number.snap  puffin_parser__tests__parser__let_stmt.snap  puffin_parser__tests__parser__let_stmt_concrete_type.snap  puffin_parser__tests__parser__multiple_assign.snap  puffin_parser__tests__parser__multiple_prefix_operation.snap  puffin_parser__tests__parser__multiple_simple.snap  (+8 more)
crates/puffin_vfs/: Cargo.toml
crates/puffin_vfs/src/: lib.rs  monitor.rs  path.rs  path_interner.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  main.rs
src/: lib.rs  (+1 more)
(+122 files in other folders)
