[package]
name = "puffin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3", features = ["derive"] }
rustyline = "12.0"
puffin_parser = { path = "../puffin_parser/" }
puffin_codegen = { path = "../puffin_codegen/" }
puffin_vm = { path = "../puffin_vm/" }
