[package]
name = "puffin_ast"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.16"
rowan = "0.15"
fxhash = "0.2"
puffin_macro = { path = "../puffin_macro/" }
puffin_source = { path = "../puffin_source" }
ahash = "0.8"
