[package]
name = "puffin_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin_vm = { path = "../puffin_vm/" }
puffin_ast = { path = "../puffin_ast/" }
puffin_hir = { path = "../puffin_hir/" }
puffin_parser = { path = "../puffin_parser/" }
puffin_error = { path = "../puffin_error/" }
