[package]
name = "puffin_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin_source = { path = "../puffin_source/" }
puffin_vfs = { path = "../puffin_vfs/" }
thiserror = "1.0.43"
colored = "2.0.4"
itertools = "0.12"

[dev-dependencies]
insta = "1.31"
serial_test = "2.0.0"
