[package]
name = "tools"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
tera = { version = "1.18", default_features = false}
heck = "0.4"
anyhow = "1.0"
similar = "2.2"
clap = { version = "4.2", features = ["derive"] }